Correction de la distortion du canvas

--- a/client/ui/css/mainStyles.css
+++ b/client/ui/css/mainStyles.css
@@ -74,7 +74,6 @@ input {
 }
 
 #c {
-  position: absolute;
   width: 100%;
   height: 100%;
   display: block;
